WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65770
Web Inspector: Resources panel does not show main resource cookies.
https://bugs.webkit.org/show_bug.cgi?id=65770
Summary
Web Inspector: Resources panel does not show main resource cookies.
Vsevolod Vlasov
Reported
2011-08-05 08:27:15 PDT
Resources panel does not show main resource cookies.
Attachments
Patch
(8.50 KB, patch)
2011-08-08 04:51 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Patch
(7.44 KB, patch)
2011-08-08 06:05 PDT
,
Vsevolod Vlasov
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2011-08-05 08:28:01 PDT
Original chromium report:
https://code.google.com/p/chromium/issues/detail?id=77276
Vsevolod Vlasov
Comment 2
2011-08-08 04:51:52 PDT
Created
attachment 103229
[details]
Patch
Pavel Feldman
Comment 3
2011-08-08 05:29:02 PDT
Comment on
attachment 103229
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=103229&action=review
> Source/WebCore/inspector/InspectorPageAgent.cpp:402 > Vector<CachedResource*> allResources = cachedResourcesForFrame(frame);
allResourceURLsForFrame() ?
Vsevolod Vlasov
Comment 4
2011-08-08 06:05:50 PDT
Created
attachment 103236
[details]
Patch
Vsevolod Vlasov
Comment 5
2011-08-09 03:34:19 PDT
Committed
r92672
: <
http://trac.webkit.org/changeset/92672
>
Vsevolod Vlasov
Comment 6
2011-10-09 16:51:01 PDT
***
Bug 69733
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug