Web Inspector: Resources panel does not show main resource cookies. https://bugs.webkit.org/show_bug.cgi?id=65770

Reviewed by Pavel Feldman.

Source/WebCore:

Test: http/tests/inspector/resource-main-cookies.php

* inspector/InspectorPageAgent.cpp:
(WebCore::allResourcesURLsForFrame):
(WebCore::InspectorPageAgent::getCookies):
(WebCore::InspectorPageAgent::deleteCookie):

LayoutTests:

* http/tests/inspector/resource-main-cookies-expected.txt: Added.
* http/tests/inspector/resource-main-cookies.php: Added.
* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/81758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92672 268f45cc-cd09-0410-ab3c-d52691b4dbfc